fix: 修复Java 8兼容性问题
- @Deprecated注解移除since和forRemoval参数(Java 9+特性)
- String.repeat()方法替换为自定义repeatString()方法(Java 11+特性)
- List.of()替换为Collections.emptyList()(Java 9+特性)

修复文件:
- forum-common: PasswordUtils.java, JwtUtils.java
- forum-gateway: CorsConfig.java, AuthGlobalFilter.java
- forum-interaction: MentionServiceImpl.java